--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </header>
 
         <section class="mainimage">
-            <img./images/hacker.png width="450" height="465">
+            <img./VSCode/hacker.png width="450" height="465">
         </section>
 
         <section class="down">
@@ -67,7 +67,7 @@
 
         
 
-        <div class="proje">
+        <div class="project">
             <h4>Project</h4>
         </div>
 
