--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </header>
 
         <section class="mainimage">
-            <img./images/hacker.png: width="450" height="465">
+            <img scr="hacker.png" width="450" height="465">
         </section>
 
         <section class="down">
