--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
 
         <section class="youtube">
-        <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">
+        <a href=">
         <iconify-icon icon="mdi:youtube" style="color: white;" width="55" height="55"></iconify-icon>
         </a>
         </section>
